# stockquantinvest

./: .gitignore  LICENSE  README.md  a_stock_codes.csv  hsi_constituents.csv  nasdaq100_constituents.csv  pyproject.toml  sp500_constituents.csv  watchlist.json
examples/: fetch_a_stock_list.py  fetch_index_constituents.py  import_symbols.py  run_30min_backtest.py  run_backtest.py
quantinvest/: __init__.py  config.py  main.py
quantinvest/backtest/: __init__.py  engine.py
quantinvest/data/: __init__.py  akshare_data.py  baostock_data.py  base.py  database.py  yfinance_data.py
quantinvest/strategy/: __init__.py  alpha.py  base_strategy.py  bollinger.py  breakout.py  cost_cross.py  ma_cross.py  macd_strategy.py  reversal.py  talib_helpers.py  turtle.py
quantinvest/viz/: __init__.py  plotter.py
tests/: test_data.py  test_database.py
web/: server.py
web/backend/: __init__.py  app.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: BacktestView.jsx  BatchReportView.jsx  ErrorBoundary.jsx  OptimizerView.jsx  Sidebar.jsx
web/frontend/src/hooks/: useBacktest.js  useSymbolResolver.js  useWatchlist.js
web/frontend/src/styles/: charts.css  layout.css  optimizer.css  report.css  sidebar.css  variables.css
web/frontend/src/utils/: charts.js  stats.js
