[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantinvest"
version = "0.1.0"
description = "A quantitative investment framework integrating A-stock, US-stock data with backtrader backtesting"
requires-python = ">=3.10"
dependencies = [
    "akshare==1.18.64",
    "baostock==0.9.2",
    "yfinance==1.4.1",
    "backtrader==1.9.78.123",
    "pandas==3.0.3",
    "matplotlib==3.11.0",
    "numpy==1.26.4",
    "ta-lib==0.6.8",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
quantinvest = "quantinvest.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100
